--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,10 +59,31 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/jpg.png
+    - images/banner.png
+    - images/Frame 27.png
+    - images/Frame 28.png
+    - images/Frame 29.png
+    - images/Frame 30.png
+    - images/See all.jpg
+    - images/Suggestions.png
+    - images/abc 1.png
+    - images/abc 2.png
+    - images/xyz2.png
+    - images/xyz 1.png
+    - images/Frame 13.png
+    - images/top.png
+    - images/Frame 34.png
+    - images/Frame 35.png
+    - images/Frame 36.png
+    - images/Frame 37.png
+    - images/rect.png
+    - images/rrr.png
+    - images/rrr2.png
+    - images/aaa.png
+    - images/Union.png
+    - images/www.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -74,17 +95,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  #fonts:
+   #- family: Schyler
+     # fonts:
+      #  - asset: fonts/Schyler-Regular.ttf
+     #   - asset: fonts/Schyler-Italic.ttf
+    #      style: italic
+   # - family: Trajan Pro
+     # fonts:
+     #   - asset: fonts/TrajanPro.ttf
+    #    - asset: fonts/TrajanPro_Bold.ttf
+   #       weight: 700
+          
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
