--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "D:/flutter/uber_ui/windows"
+    "cmake.sourceDirectory": "D:/flutter/uber_ui/windows",
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "main"
+    ]
 }
